--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 86,
    "id": "aa3c6d13",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 87,
    "id": "37579f27",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 88,
    "id": "84a80256",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "9911a1d9",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 90,
    "id": "c2fcb140",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 91,
    "id": "5ef67f59",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 92,
    "id": "92aeb9e9",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 93,
    "id": "8d229d8b",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 94,
    "id": "c944b49b",
    "metadata": {},
    "outputs": [],
@@ -186,13 +186,14 @@
     "df.drop(['Please rank which block class times you prefer',\n",
     "       'Please rank which stand alone class times you prefer?'], axis = 1, inplace= True)\n",
     "df = df.rename(columns={\n",
-    "    'Do you prefer \"blocks\" of classes (e.g. two classes from 9:30 AM-12:15 PM) or stand alone classes (e.g. one class from 3:30-4:45 PM)': \"Blocks Or Stand Alone\"\n",
+    "    'Do you prefer \"blocks\" of classes (e.g. two classes from 9:30 AM-12:15 PM) or stand alone classes (e.g. one class from 3:30-4:45 PM)': \"Blocks Or Stand Alone\", \n",
+    "    'What class are you?': 'Class'\n",
     "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 95,
    "id": "47809782",
    "metadata": {},
    "outputs": [],
