--- a/code/cleaning.ipynb
+++ b/code/cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "id": "aa3c6d13",
    "metadata": {},
    "outputs": [
@@ -40,17 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "id": "37579f27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(\"BSDS Class Times(1-28).xlsx\")"
+    "df = pd.read_excel(\"../data/BSDS Class Times(1-28).xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "id": "84a80256",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "id": "9911a1d9",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "id": "c2fcb140",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "id": "5ef67f59",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "id": "92aeb9e9",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 18,
    "id": "8d229d8b",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "id": "c944b49b",
    "metadata": {},
    "outputs": [],
@@ -193,12 +193,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 20,
    "id": "47809782",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"data.csv\", index = False)"
+    "df.to_csv(\"../data/data.csv\", index = False)"
    ]
   }
  ],
