--- a/code/times.ipynb
+++ b/code/times.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "id": "16e4fd7d",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "id": "0c0a4da0",
    "metadata": {},
    "outputs": [
@@ -42,13 +42,13 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data.csv\")\n",
+    "df = pd.read_csv(\"../data/data.csv\")\n",
     "df.columns"
    ]
   },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "id": "382c01da",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "id": "49546927",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "id": "8d82a7c7",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 16,
    "id": "436126dd",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
     "plt.xlabel(\"Type\")\n",
     "plt.ylabel(\"Count\")\n",
     "\n",
-    "plt.savefig(\"images/counts.png\")\n",
+    "plt.savefig(\"../images/counts.png\")\n",
     "plt.show()"
    ]
   },
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 17,
    "id": "a8bf78ac",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "id": "ecd7b957",
    "metadata": {},
    "outputs": [
@@ -196,13 +196,13 @@
     "plt.title(\"Top 5 Most Popular Block Times\")\n",
     "plt.xticks(rotation=30, ha=\"right\")\n",
     "\n",
-    "plt.savefig(\"images/block.png\")\n",
+    "plt.savefig(\"../images/block.png\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "id": "fa532fe0",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 20,
    "id": "bc754429",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
     "plt.title(\"Top 5 Most Popular Stand Alone Times\")\n",
     "plt.xticks(rotation=30, ha=\"right\")\n",
     "\n",
-    "plt.savefig(\"images/stand.png\")\n",
+    "plt.savefig(\"../images/stand.png\")\n",
     "plt.show()"
    ]
   }
